argo/alma-7b-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      serviceAccountName: sa
      containers:
        - image: docker.io/kennethreitz/httpbin
          resources: {}
          imagePullPolicy: IfNotPresent
          name: web1
          ports:
            - containerPort: 80
