argo/alma-7b-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: web # ここを変更したら deploymentの両方修正必要
