argo/alma-7b-server/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  hosts:
    - "*"
  gateways:
    - gw
  http:
    - route:
        - destination:
            host: svc
            port:
              number: 8000
